# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Id: $

  13 Apr 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/livecd-stage2/livecd-stage2-controller.sh,
  targets/support/kmerge.sh, targets/support/livecdfs-update.sh,
  targets/support/rc-update.sh:
  Change all checks for livecd/type: gentoo-release-livecd to
  gentoo-release-live* so we can add a new gentoo-release-livedvd livecd/type
  to allow for auto-fetching of distfiles and stages onto official DVD media.

  11 Apr 2008; Chris Gianelloni <wolf31o2@gentoo.org> TODO,
  targets/livecd-stage1/livecd-stage1-controller.sh,
  targets/livecd-stage2/livecd-stage2-controller.sh:
  Updated TODO. Added code to livecd-stage1 to generate a package list, which
  will be used in livecd-stage2 with the upcoming livedvd livecd/type to fetch
  the distfiles automatically.

  11 Apr 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  modules/generic_stage_target.py:
  Fix seedcache output so it fits in 80 columns.

  08 Apr 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage1/stage1-chroot.sh:
  We should likely install baselayout before anything else, including the
  package manager. As such, I've moved it to after sys-apps/baselayout is
  installed.

  08 Apr 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/livecd-stage2/livecd-stage2-controller.sh:
  Check for a snapshot in the overlay and error if one is present. This should
  ensure that the snapshot on the CD is the same as the one used to build the
  ISO.

  06 Apr 2008; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  modules/catalyst_support.py:
  Added a small patch from Tim Yamin <tim.yamin@zonbu.com> to fix make.conf
  parsing of variables with numbers in them. This is catalyst 2.0.6_pre17 for
  testing.

  06 Apr 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage1/stage1-chroot.sh:
  Change back to using sys-apps/baselayout. We'll need to come up with a